# PulseMarkets

./: .gitignore  Cargo.toml  README.md  linera.yml
contracts/market/: Cargo.toml
contracts/market/src/: actions.rs  error.rs  events.rs  lib.rs  settlement.rs  state.rs
contracts/market/tests/: market_tests.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/charts/: Sparkline.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/components/market/: MarketCard.tsx  MarketHeader.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  GradientBorder.tsx  Input.tsx
frontend/src/components/wallet/: ConnectWallet.tsx
frontend/src/lib/hooks/: useMarket.ts  useMarkets.ts
frontend/src/lib/linera/: client.ts  queries.ts  subscriptions.ts
frontend/src/lib/utils/: format.ts  parse.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  MarketDetail.tsx  NotFound.tsx
frontend/src/styles/: globals.css
frontend/tests/: dashboard.test.tsx  market.test.tsx
scripts/: build.sh  deploy.sh  test.sh
